tests/codegen/fail/object/derive_field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
 --> fail/object/derive_field_non_output_return_type.rs:8:10
  |
8 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
  |
  = help: the following other types implement trait `IsOutputType<S>`:
            <bool as IsOutputType<__S>>
            <i32 as IsOutputType<__S>>
            <f64 as IsOutputType<__S>>
            <ArcStr as IsOutputType<S>>
            <ObjA as IsOutputType<__S>>
            <Box<T> as IsOutputType<S>>
            <juniper::meta::Field<S> as IsOutputType<S>>
            <Argument<S> as IsOutputType<S>>
          and $N others
